<resources>
    <string name="app_name">Endeavor</string>

    <!--Toolbar Options-->
    <string name="add_title">Add Document</string>
    <string name="update_title">Update Document</string>
    <string name="add_option">AddForm</string>
    <string name="screenshot_option">Screenshot</string>
    <string name="dark_option">DarkMode</string>
    <string name="language_option">Language</string>

    <!--Navigation Drawer-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Endeavor</string>
    <string name="nav_header_subtitle">App displays popular recipes with instructions</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!--Navigation Menu Options-->
    <string name="menu_home">Home</string>
    <string name="menu_statistics">Statistics</string>
    <string name="menu_impact">Impact</string>
    <string name="menu_opportunities">Opportunities</string>
    <string name="menu_about">About</string>

    <!--Tab Names-->
    <string name="tab_hours">Hours</string>
    <string name="tab_miles">Miles</string>
    <string name="tab_purchases">Purchases</string>

    <!--Form Options-->
    <string name="form_document_title">Document Title</string>
    <string name="form_organization">Organization</string>
    <string name="form_project">Project</string>
    <string name="form_date">Date</string>
    <string name="form_hours">Hours</string>
    <string name="form_miles">Miles</string>
    <string name="form_purchases">Purchases</string>
    <string name="save_option">Save</string>
    <string name="update_option">Update</string>

    <!--Widget Options-->
    <string name="widget_item">item</string>
</resources>
