<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.form.FormActivity">

        <EditText
            android:id="@+id/edit_document_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="8dp"
            android:autofillHints="@string/form_document_title"
            android:hint="@string/form_document_title"
            android:inputType="text"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edit_organization"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edit_document_title"
            android:layout_marginStart="8dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="8dp"
            android:autofillHints="@string/form_organization"
            android:hint="@string/form_organization"
            android:inputType="text"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edit_project"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edit_organization"
            android:layout_marginStart="8dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="8dp"
            android:autofillHints="@string/form_project"
            android:hint="@string/form_project"
            android:inputType="text"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edit_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edit_project"
            android:layout_marginStart="8dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="8dp"
            android:autofillHints="@string/form_date"
            android:hint="@string/form_date"
            android:inputType="date"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edit_hours"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edit_date"
            android:layout_marginStart="8dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="8dp"
            android:autofillHints="@string/form_hours"
            android:hint="@string/form_hours"
            android:inputType="numberDecimal"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edit_miles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edit_hours"
            android:layout_marginStart="8dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="8dp"
            android:autofillHints="@string/form_miles"
            android:hint="@string/form_miles"
            android:inputType="numberDecimal"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edit_purchases"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edit_miles"
            android:layout_marginStart="8dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="8dp"
            android:autofillHints="@string/form_purchases"
            android:hint="@string/form_purchases"
            android:inputType="numberDecimal"
            android:textSize="20sp" />

        <Button
            android:id="@+id/save_note_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edit_purchases"
            android:layout_marginStart="8dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="8dp"
            android:background="@color/LightAccentGreen"
            android:text="@string/save_option" />

    </RelativeLayout>
</ScrollView>