<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".ui.master.AddFormActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/add_form_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="12dp"
            android:layout_marginRight="12dp">

            <EditText
                android:id="@+id/edit_document_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/form_document_title"
                android:hint="@string/form_document_title"
                android:inputType="text"
                android:labelFor="@+id/edit_document_title"
                android:textSize="20sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="12dp"
            android:layout_marginRight="12dp">

            <EditText
                android:id="@+id/edit_organization"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/form_organization"
                android:hint="@string/form_organization"
                android:inputType="text"
                android:textSize="20sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="12dp"
            android:layout_marginRight="12dp">

            <EditText
                android:id="@+id/edit_project"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/form_project"
                android:hint="@string/form_project"
                android:inputType="text"
                android:textSize="20sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="12dp"
            android:layout_marginRight="12dp">

            <EditText
                android:id="@+id/edit_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/form_date"
                android:hint="@string/form_date"
                android:inputType="date"
                android:textSize="20sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="12dp"
            android:layout_marginRight="12dp">

            <EditText
                android:id="@+id/edit_hours"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/form_hours"
                android:hint="@string/form_hours"
                android:inputType="numberDecimal"
                android:textSize="20sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="12dp"
            android:layout_marginRight="12dp">

            <EditText
                android:id="@+id/edit_miles"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/form_miles"
                android:hint="@string/form_miles"
                android:inputType="numberDecimal"
                android:textSize="20sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="12dp"
            android:layout_marginRight="12dp">

            <EditText
                android:id="@+id/edit_purchases"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/form_purchases"
                android:hint="@string/form_purchases"
                android:inputType="numberDecimal"
                android:textSize="20sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/save_note_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="12dp"
            android:layout_marginRight="12dp"
            android:background="@color/LightAccentGreen"
            android:text="@string/save_option" />

        <com.google.android.ads.nativetemplates.TemplateView
            android:id="@+id/add_form_template"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="12dp"
            android:layout_marginRight="12dp"
            app:gnt_template_type="@layout/gnt_small_template_view" />
    </LinearLayout>
</ScrollView>